--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <link href="/css/bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet" media="all">
-    
+    <link href="/css/styles.css" rel="stylesheet" media="all">
   </head>
   <body>
     <div id="app"></div>
